--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "postcss-url": "^10.1.3",
     "posthtml-include": "^2.0.1",
     "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0"
   }
 }
