--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "web": {
       "context": "browser",
       "publicUrl": "./",
-      "source": "src/index.html"
+      "source": "/src/index.html"
     }
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.13.0",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.13.0",
     "postcss": "^8.4.49",
