--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "postcss-import": "^16.1.0",
     "postcss-url": "^10.1.3",
     "posthtml-include": "^2.0.1",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "svgo": "^3.3.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0"
