--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "web": {
       "context": "browser",
       "publicUrl": "./",
-      "source": "/src/index.html"
+      "source": "src/index.html",
+      "engines": {
+        "browsers": "last 2 versions, > 0.5%, not dead"
+      }
     }
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.0",
+    "autoprefixer": "^10.4.20",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.13.0",
     "postcss": "^8.4.49",
